@@ -13,6 +13,7 @@
   * Undefined index when generating a cert from a bad CSR (#870)
   * Add language to discourage people from randomly trying to join
     unknown projects, and to discourage leads from adding them. (#875)
+  * Avoid double registration: do-register checks for existing account (#864)
 
 == 2.4 ==
   * Fix geni-revoke-member-privileges script (#716)
